[package]
name = "clock-floater"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A minimal floating timer/countdown application for macOS"
license = "MIT OR Apache-2.0"
repository = "https://github.com/iamquang95/clock-floater"

[dependencies]
eframe = "0.29"
rand = "0.8"
